--- a/backend/src/main/resources/application-test.yml
+++ b/backend/src/main/resources/application-test.yml
@@ -13,6 +13,13 @@ spring:
 
   jpa:
     database: h2
-    hibernate.ddl-auto: update
-#    show-sql: true
-#    properties.hibernate.format_sql: true
+    hibernate.ddl-auto: create
+    show-sql: true
+    properties.hibernate.format_sql: true
+    properties.hibernate.globally_quoted_identifiers: true
+
+
+  h2:
+    console:
+      enabled: true
+      path: /console
