--- a/backend/src/main/resources/application-test.yml
+++ b/backend/src/main/resources/application-test.yml
@@ -14,6 +14,7 @@ spring:
   jpa:
     database: h2
     hibernate.ddl-auto: create
+    hibernate.use-new-id-generator-mappings: false
     show-sql: true
     properties.hibernate.format_sql: true
     properties.hibernate.globally_quoted_identifiers: true
