--- a/backend/src/main/resources/application-dev.yml
+++ b/backend/src/main/resources/application-dev.yml
@@ -13,6 +13,8 @@ spring:
 
   jpa:
     database: mysql
-    hibernate.ddl-auto: update
+    hibernate.ddl-auto: create-drop
+    hibernate.use-new-id-generator-mappings: false
 #    show-sql: true
 #    properties.hibernate.format_sql: true
+    properties.hibernate.globally_quoted_identifiers: true
