--- a/backend/src/main/resources/application-dev.yml
+++ b/backend/src/main/resources/application-dev.yml
@@ -4,7 +4,7 @@ server:
 
 spring:
   datasource:
-    url: jdbc:mysql://localhost:3306/kgueats?autoReconnection=true&serverTimezone=UTC&characterEncoding=UTF-8
+    url: jdbc:mysql://localhost:3306/kgueats?autoReconnection=true&serverTimezone=UTC&useUnicode=true&characterEncoding=UTF-8
     username: sinb57
     password: qwe123!@#
     driver-class-name: com.mysql.cj.jdbc.Driver
@@ -14,7 +14,6 @@ spring:
   jpa:
     database: mysql
     hibernate.ddl-auto: create-drop
-    hibernate.use-new-id-generator-mappings: false
 #    show-sql: true
 #    properties.hibernate.format_sql: true
     properties.hibernate.globally_quoted_identifiers: true
