--- a/backend/src/main/resources/application-dev.yml
+++ b/backend/src/main/resources/application-dev.yml
@@ -17,3 +17,6 @@ spring:
 #    show-sql: true
 #    properties.hibernate.format_sql: true
     properties.hibernate.globally_quoted_identifiers: true
+
+  jwt:
+    secret:
