--- a/backend/src/main/resources/application-dev.yml
+++ b/backend/src/main/resources/application-dev.yml
@@ -11,6 +11,7 @@ spring:
 #    initialization-mode: always
 
 
+
   jpa:
     database: mysql
     hibernate.ddl-auto: create-drop
@@ -20,3 +21,5 @@ spring:
 
   jwt:
     secret:
+
+file.upload.review.directory: backend/src/main/resources/review
