feat: 리뷰 이미지 업로드 파일 경로 수정

--- a/backend/src/main/resources/application-dev.yml
+++ b/backend/src/main/resources/application-dev.yml
@@ -22,4 +22,4 @@ spring:
   jwt:
     secret:
 
-file.upload.review.directory: backend/src/main/resources/review
+file.upload.review.directory: backend/review
