--- a/backend/src/main/resources/application-dev.yml
+++ b/backend/src/main/resources/application-dev.yml
@@ -14,7 +14,7 @@ spring:
 
   jpa:
     database: mysql
-    hibernate.ddl-auto: create-drop
+    hibernate.ddl-auto: update
 #    show-sql: true
 #    properties.hibernate.format_sql: true
     properties.hibernate.globally_quoted_identifiers: true
